--- a/iota-holder/package.json
+++ b/iota-holder/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "install-holder-frontend": "cd frontend && yarn install",
+    "install-holder-frontend": "cd frontend && yarn install && cd ..",
     "install-holder-backend": "cd backend/bindings/wasm/examples && npm install && npm run build",
     "holder-frontend": "cd frontend && yarn start",
     "holder-backend": "cd backend/bindings/wasm && npm run start"
