--- a/iota-verifier/package.json
+++ b/iota-verifier/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "install-verifier-frontend": "cd frontend && pnpm install",
+    "install-verifier-frontend": "cd frontend && pnpm install && cd ..",
     "install-verifier-backend": "cd backend/bindings/wasm/examples && npm install && npm run build",
     "verifier-frontend": "cd frontend && pnpm run dev",
     "verifier-backend": "cd backend/bindings/wasm && npm run start"
